# IonEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
ECS/: CMakeLists.txt
ECS/include/: Component.h  ComponentArrayGeneric.h  ComponentGeneric.h  Entity.h
ECS/source/: Entity.cpp
common/: IonCompiler.hpp  IonOpenGL.hpp  IonUtils.hpp
dependencies/: CMakeLists.txt
dependencies/include/glad/: glad.h
dependencies/include/stb/: stb_image.h
dependencies/source/imgui/: imgui_impl_glfw.cpp  imgui_widgets.cpp
dump/ion/engine/: CMakeLists.txt
dump/ion/engine/UI/: CMakeLists.txt
editor/: CMakeLists.txt
editor/include/: Application.h  Timer.h  Viewport.h
editor/source/: Application.cpp  FrameBuffer.cpp  UITheme.cpp  Viewport.cpp  main.cpp
ion/: CMakeLists.txt  IonCompiler.hpp  IonDebug.hpp  IonOpenGL.hpp  IonUtils.hpp
ion/dependencies/: CMakeLists.txt
ion/dependencies/include/imgui/: imgui_internal.h
ion/dependencies/source/glad/: glad.c
ion/dependencies/source/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
ion/engine/: CMakeLists.txt  main.cpp
ion/engine/UI/: Application.cpp  Application.h  CMakeLists.txt
ion/engine/UI/include/: Application.h  FrameBuffer.h  Testing.h
ion/engine/UI/source/: Application.cpp  FrameBuffer.cpp  UITheme.cpp
ion/engine/application/: CMakeLists.txt
ion/engine/application/include/: Application.h  Timer.hpp  Viewport.h
ion/engine/application/source/: Application.cpp  Viewport.cpp  main.cpp
ion/engine/core/: Application.cpp  Application.h  CMakeLists.txt  FrameBuffer.cpp  Testing.h
ion/engine/core/include/: Component.h  ComponentArrayGeneric.h  Entity.h  EntityManager.h  Transform.h
ion/engine/core/source/: Entity.cpp  EntityManager.cpp  Transform.cpp
ion/engine/renderer/: CMakeLists.txt
ion/engine/renderer/include/: Buffer.h  Camera.h  Model.h  ModelImporter.h  Shader.h  TextureCache.h  TextureLoader.h  Vertex.h  VertexArray.h
ion/engine/renderer/source/: Camera.cpp  Model.cpp  ModelImporter.cpp  Shader.cpp  TextureCache.cpp  TextureLoader.cpp  Vertex.cpp  VertexArray.cpp  delete.cpp
ion/engine/ui/include/: Theme.hpp  TitleBar.h
ion/engine/ui/source/: TitleBar.cpp
renderer/: CMakeLists.txt
renderer/include/: Buffer.h  Camera.h  RendererExport.h  VertexArray.h
resources/: CMakeLists.txt
resources/include/: Model.h  ResourceExport.h  Shader.h  Vertex.h
resources/source/: Model.cpp
